--- a/Cafeteria/nbproject/project.properties
+++ b/Cafeteria/nbproject/project.properties
@@ -34,10 +34,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Cafeteria
 excludes=
 file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\roger.psouza\\Downloads\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\roger\\OneDrive\\\u00c1rea de Trabalho\\Senac\\PI\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar}:\
+    ${file.reference.mysql-connector-j-8.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
