--- a/Cafeteria/nbproject/project.properties
+++ b/Cafeteria/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Cafeteria
+application.vendor=roger
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/Cafeteria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Cafeteria
+endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\roger\\OneDrive\\\u00c1rea de Trabalho\\Senac\\PI\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 includes=**
