--- a/Cafeteria/nbproject/project.properties
+++ b/Cafeteria/nbproject/project.properties
@@ -35,11 +35,11 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Cafeteria
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar-1=C:\\Users\\roger\\OneDrive\\\u00c1rea de Trabalho\\Senac\\PI\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar=C:\\Users\\nicol\\OneDrive\\\u00c1rea de Trabalho\\Facul - ADS\\Projeto Integrador\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar-1}
+    ${file.reference.mysql-connector-j-8.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -79,7 +79,7 @@ main.class=view.formLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_18
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
